chore(quality): fix some sonarqube issues to return on a good code quality